# Django_BBoard_V2

./: .gitignore  pyproject.toml
bboard/bboard/: settings.py  urls.py
bboard/main/: admin.py  apps.py  forms.py  middlewares.py  models.py  urls.py  utilities.py  views.py
bboard/main/migrations/: 0001_initial.py  0002_rubric_subrubric_superrubric_rubric_super_rubric.py  0003_additionalimage_bb.py  0004_comment.py
bboard/main/static/main/: style.css
bboard/main/templates/email/: new_comment_letter_body.txt  new_comment_letter_subject.txt
bboard/main/templates/layout/: basic.html
bboard/main/templates/main/: about.html  bad_signature.html  by_rubric.html  delete_user.html  detail.html  profile.html  profile_bb_add.html  profile_bb_change.html  profile_bb_delete.html  register_done.html  register_user.html
