[tool.poetry]
name = "django_bboard_v2"
version = "0.1.0"
description = ""
authors = ["IvanovIvan1900 <ivanovivan159753@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-bootstrap4 = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
