[tool.poetry]
name = "django_bboard_v2"
version = "0.1.0"
description = ""
authors = ["IvanovIvan1900 <ivanovivan159753@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0"
django-bootstrap4 = "^21.1"
autopep8 = "^1.6.0"
easy-thumbnails = "^2.8"
django-cleanup = "^5.2.0"
django-simple-captcha = "^0.5.14"
django-debug-toolbar = "^3.2.4"
django-debugtools = "^2.0"
django-jazzmin = "^2.4.8"
django-crispy-forms = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
